# AI_Training_Batch_May_2026

./: .gitignore  README.md  main.py  pyproject.toml
submissions/assignments/assignment-01/divya-khandelwal/Prompt_engineering_evaluation/: final_analysis.md  groq_client.py  main.ipynb  prompts.py  pyproject.toml  requirements.txt
submissions/assignments/assignment-02/ashish-sinha/: 2_RAG_TESLAReports.ipynb  README.md  Telsa_Annual_Reports_RAG_System.ipynb  pyproject.toml  query_expansion_results.json  requirements.txt
submissions/assignments/assignment-02/ashish-sinha/chroma_db/: chroma.sqlite3
submissions/assignments/assignment-02/divya-khandelwal/AG0854__2/: README.md  pyproject.toml  query_expansion.ipynb  query_expansions.json  requirements.txt
submissions/assignments/assignment-02/subhranshu-pattnayak/: README.md  main.ipynb  main.py  pyproject.toml
submissions/assignments/assignment-03/Mohammad-Zaid/: .gitignore  RAG-with-hypothetical-questions.ipynb  README.md  benchmark_results.json  pyproject.toml
submissions/assignments/assignment-04/: .gitignore  README.md  main.py  main_legacy.py  pyproject.toml  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/Aman-Choudhary/ecommerce-agent-assignment/: README.md  main.py  requirements.txt  requirements1.txt
submissions/assignments/assignment-04/Mohammad-Zaid/: .gitignore  README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md  streamlit_app.py
submissions/assignments/assignment-04/Mohammad-Zaid/data/: ecommerce.db
submissions/assignments/assignment-04/Mohammad-Zaid/scripts/: create_database.py  seed_database.py
submissions/assignments/assignment-04/Mohammad-Zaid/src/: app.py  app_modern.py
submissions/assignments/assignment-04/Mohammad-Zaid/tests/: conftest.py  test_agent_queries.py  test_database.py  test_sql_tool.py
submissions/assignments/assignment-04/Palak-Jhamb/: README.md  pyproject.toml  requirements-legacy.txt  sample_queries.md
submissions/assignments/assignment-04/Palak-Jhamb/data/: ecommerce.db
submissions/assignments/assignment-04/Palak-Jhamb/scripts/: create_database.py  seed_database.py
submissions/assignments/assignment-04/Palak-Jhamb/src/: app.py  app_modern.py
submissions/assignments/assignment-04/Palak-Jhamb/test/: test_agent_queries.py  test_database.py  test_sql_tool.py
submissions/assignments/assignment-04/Palak-Jhamb/test_results/: agent_output.txt  database_output.txt  tool_output.txt
submissions/assignments/assignment-04/Rohitkumar/ecommerce-agent-assignment/: .env.example  .gitignore  README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/Vaishnavi-Gupta/ecommerce-agent-assignment/: .gitignore  README.md  check_db.py  requirements-legacy.txt  requirements.txt
submissions/assignments/assignment-04/aditya-sodani/ecommerce-agent-assignment/: .env.example  .gitignore  README.md  pyproject.toml  requirements-legacy.txt  requirements-modern.txt
submissions/assignments/assignment-04/data/: ecommerce.db
submissions/assignments/assignment-04/divya-khandelwal/ecommerce_agent_assignment/: README.md  app.py  app_modern.py  pyproject.toml  requirements-legacy.txt  requirements-modern.txt
submissions/assignments/assignment-04/ecommerce-agent-assignment/: .env.example  README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/ecommerce-agent-assignment/data/: ecommerce.db
submissions/assignments/assignment-04/ecommerce-agent-assignment/scripts/: create_database.py  seed_database.py
submissions/assignments/assignment-04/ecommerce-agent-assignment/src/: app.py
submissions/assignments/assignment-04/ecommerce-agent-assignment/tests/: test_agent_queries.py  test_database.py  test_sql_tool.py
submissions/assignments/assignment-04/mohammad-anas/: README.md  doc1.ipynb  requirements_legacy.txt  requirements_modern.txt
submissions/assignments/assignment-04/mohammad-anas/data/: ecommerce.db
submissions/assignments/assignment-04/mohammad-anas/src/: app.py
submissions/assignments/assignment-04/mohammad-anas/tests/: test_agent_queries.py  test_database.py
submissions/assignments/assignment-04/mohd-zaid-ansari/: .gitignore  README.md  requirements1.txt  requirements2.txt  sample_queries.md
submissions/assignments/assignment-04/mohd-zaid-ansari/scripts/: create_database.py  seed_database.py
submissions/assignments/assignment-04/mohd-zaid-ansari/src/: app.py  moder_app.py
submissions/assignments/assignment-04/mohd-zaid-ansari/tests/: test_database.py  test_sql_tool.py
submissions/assignments/assignment-04/nandani-bisht/: README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/nandani-bisht/data/: ecommerce.db
submissions/assignments/assignment-04/nandani-bisht/logs/: sample_run.txt
submissions/assignments/assignment-04/nandani-bisht/scripts/: create_database.py  seed_database.py
submissions/assignments/assignment-04/nandani-bisht/src/: app.py
submissions/assignments/assignment-04/pranay-gupta/: README.md  main.py  pyproject.toml  requirements-modern.txt
submissions/assignments/assignment-04/scripts/: check_counts.py  check_db.py  create_database.py  seed_database.py
submissions/assignments/assignment-04/simran-kaur/: README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/subhranshu-pattnayak/: README.md
submissions/assignments/assignment-04/taniya-gupta/: README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/tests/: test_langchain_tool.py  test_security.py  test_sql_tool.py  test_tool_direct.py
submissions/assignments/assignment-04/vaibhav-kesarwani/: README.md  requirements-legacy.txt  requirements-modern.txt  sample_queries.md
submissions/assignments/assignment-04/vikash-kumar/: .env.example  app_legacy.py  requirements-modern.txt
(+1819 files in other folders)
