[project]
name = "ecommerce-agent-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
