[project]
name = "ag0846-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "chromadb==0.6.3",
    "datasets==3.3.2",
    "evaluate>=0.4.6",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "langchain==0.3.20",
    "langchain-chroma==0.2.2",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.19",
    "pypdf==5.4.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers==5.1.2",
    "tiktoken==0.9.0",
]
