[project]
name = "mohammad-zaid"
version = "0.1.0"
description = "Information about the versions and dependencies of this project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "datasets>=3.3.2",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "langchain==0.3.20",
    "langchain-chroma==0.2.2",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.19",
    "pypdf==5.4.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers==5.1.2",
    "tiktoken==0.9.0",
]
