[project]
name = "ecommerce-agent-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.22.0",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]
