[project]
name = "ecommerce-agent-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.37.1",
    "langchain<1.0",
    "langchain-community>=0.3.31",
    "langchain-core>=1.4.3",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]
