[project]
name = "helpdesk-ticket-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
