[project]
name = "help-desk-ticket-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.3.8",
    "langchain-community==0.4.2",
    "langchain-groq==1.1.3",
    "langgraph>=1.2.4",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
]
