[project]
name = "ai-knowledge-assistant-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "datasets>=3.3.2",
    "groq<1.0.0",
    "ipykernel>=7.2.0",
    "langchain==0.3.20",
    "langchain-chroma==0.2.2",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.19",
    "langchain-groq>=0.3.7,<1.0.0",
    "langchain-openai>=0.3.35",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.58.0",
    "tiktoken==0.9.0",
]
