[project]
name = "helpdesk-ticket-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.30.0,<1.0.0",
    "langchain==0.3.27",
    "langchain-core>=0.3.75,<1.0.0",
    "langchain-groq==0.3.8",
    "python-dotenv>=1.2.2",
]
